--- a/css/style_pagefourth_mobile.css
+++ b/css/style_pagefourth_mobile.css
@@ -6,6 +6,10 @@
     display: none;
 }
 
+.container-background {
+    overflow: hidden;
+}
+
 .pagefourth-front-foto-container {
     display: flex;
     flex-direction: column;
@@ -43,20 +47,25 @@
 .pagefourth-front-foto-image {
     margin-top: 45px;
     width: 100%;
+    max-width: 400px;
     height: 246px;
     position: relative;
-    background-image: url(../image/pagefourth/front-foto.png);
-    background-size: cover;
+}
+
+.pagefourth-front-foto-image-img {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
 }
 
 .pagefourth-front-foto-image-back {
-    background-image: url(../image/pagefourth/background_desktop.svg);
-    background-position: 0 0;
-    background-size: 100%;
-}
-
-.pagefourth-front-foto-image-item {
-    max-width: 100%;
+    position: absolute;
+    z-index: 1;
+    top: 237px;
+    right: -405px;
 }
 
 .pagefourth-front-foto-image-text {
@@ -71,6 +80,7 @@
     box-shadow: 0px 8px 20px var(--c-line);
     width: 220px;
     height: 60px;
+    z-index: 3;
 }
 
 .pagefourth-front-foto-image-text>span {
@@ -128,6 +138,7 @@
     font-weight: normal;
     font-size: 13px;
     line-height: 20px;
+    z-index: 2;
 }
 
 .pagefourth-front-foto-stages-items-text:nth-of-type(2) {
@@ -153,6 +164,7 @@
     align-items: center;
     justify-content: center;
     border: none;
+    z-index: 2;
 }
 
 /*--------------*/
@@ -160,7 +172,6 @@
 .pagefourth-video-container {
     display: flex;
     flex-direction: column;
-    overflow: auto;
 }
 
 .pagefourth-video-items {
@@ -171,6 +182,7 @@
     border-radius: 16px;
     background-color: var(--c-white);
     padding: 20px;
+    z-index: 2;
 }
 
 .pagefourth-video-items-up {
@@ -217,6 +229,10 @@
     display: flex;
     flex-direction: column;
     margin-top: 25px;   
+}
+
+.home-chances-container-items {
+  overflow: auto;
 }
 
 .home-chances-items {
