--- a/css/style_home_mobile.css
+++ b/css/style_home_mobile.css
@@ -113,7 +113,7 @@ button > span {
   flex-direction: row;
 }
 
-.home-opportunities-container {
+.home-opportunities-container-main {
   overflow: auto;
 }
 
@@ -265,7 +265,7 @@ input::placeholder {
 
 .home-about-us-item-second-inputs > textarea,
 .home-about-us-item-second-inputs > input {
-margin-top: 15px;
+    margin-top: 15px;
     border: 1px solid var(--c-white);
     display: block;
     width: 100%;
@@ -358,6 +358,7 @@ margin-top: 15px;
 .home-plus-container {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   margin-bottom: 50px;
   width: max-content;
 }
@@ -368,7 +369,7 @@ margin-top: 15px;
 }
 
 .home-plus-item {
-  width: 260px;
+ padding: 0 16px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -386,31 +387,39 @@ margin-top: 15px;
   margin-bottom: 20px;
 }
 
+.home-plus-item > span {
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 18px;
+  color: var(--c-grey);
+  margin-top: -18px;
+  margin-bottom: 24px;
+}
+
 .home-plus-item-paragraph {
   display: flex;
   flex-direction: row;
-  width: 100%;
 }
 
 .home-plus-item-paragraph > img {
   width: 18px;
   height: 18px;
-  margin-left: 15px;
 }
 
 .home-plus-item-paragraph > p {
   width: 198px;
-  margin-bottom: 15px;
+  margin-bottom: 16px;
   margin-top: 0;
-  margin-left: 10px;
-  font-size: 15px;
-  line-height: 20px;
+  margin-left: 12px;
+  font-size: 13px;
+  line-height: 18px;
 }
 
 .home-plus-item-numbers {
   display: flex;
   flex-direction: row;
-  width: 100%;
+  justify-content: space-between;
+  width: 228px;
 }
 
 .home-plus-item-numbers-item {
@@ -436,9 +445,9 @@ margin-top: 15px;
 }
 
 .home-plus-item-numbers-item > p {
-  width: 110px;
-  font-size: 15px;
-  line-height: 20px;
+  width: 104px;
+  font-size: 13px;
+  line-height: 18px;
   text-align: center;
 }
 
@@ -593,7 +602,7 @@ margin-top: 15px;
 
 /*------------*/
 
-.home-chances {
+.home-chances-container-items {
   overflow: auto;
 }
 
