--- a/css/style_pagefifth_desktop.css
+++ b/css/style_pagefifth_desktop.css
@@ -136,6 +136,8 @@
 .pagefourth-front-foto-image {
     margin-top: 60px;
     width: 47.9%;
+    max-width: 47.9%;
+    height: 460px;
 }
 
 .pagefourth-front-foto-image-item {
