--- a/css/style_pagesecond_desktop.css
+++ b/css/style_pagesecond_desktop.css
@@ -81,7 +81,10 @@
 
 .pagesecond-front-main-container {
     flex-direction: row;
-    overflow: unset;
+}
+
+.pagesecond-front-main-items-container {
+     overflow: unset;
 }
 
 .pagesecond-front-main-foto {
@@ -356,10 +359,6 @@ textarea::placeholder, input::placeholder {
 
 /*----------------*/
 
-.pagesecond-practice {
-    overflow: unset;
-}
-
 .pagesecond-practice-container {
     margin-top: 60px;
 }
@@ -383,6 +382,10 @@ textarea::placeholder, input::placeholder {
 .pagesecond-practice-arrows>img {
     width: 48px;
     height: 48px;
+}
+
+.pagesecond-practice-items-container {
+    overflow: unset;
 }
 
 .pagesecond-practice-items {
