--- a/css/style_pagethird_desktop.css
+++ b/css/style_pagethird_desktop.css
@@ -330,6 +330,7 @@ textarea::placeholder, input::placeholder {
 
 .pagethird-lawn-stage-title>span {
     margin-left: 12px;
+    width: 80%;
 }
 
 .pagethird-lawn-stage-title>img {
