--- a/css/style_pagefifth_mobile.css
+++ b/css/style_pagefifth_mobile.css
@@ -177,14 +177,10 @@
 
 /*--------------*/
 
-.pagefourth-video {
-    z-index: 5;
-}
-
 .pagefourth-video-container {
     margin-bottom: 45px;
-    overflow: auto;
-    z-index: 5;
+    display: flex;
+    flex-direction: column;
 }
 
 .pagefourth-video-items {
@@ -195,7 +191,7 @@
     border-radius: 16px;
     background-color: var(--c-white);
     padding: 20px;
-    z-index: 5;
+    z-index: 2;
 }
 
 .pagefourth-video-items-up {
@@ -244,6 +240,10 @@
     margin-top: 25px;
 }
 
+.home-chances-container-items {
+  overflow: auto;
+}
+
 .home-chances-items {
     display: flex;
     flex-direction: row;
@@ -259,6 +259,14 @@
     box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.08);
     padding: 8px;
     border-radius: 10px;
+}
+
+.home-chances-items:nth-child(5) {
+    margin-right: 0;
+}
+
+.home-chances-items:nth-child(5)>.home-chances-p {
+    width: 186px;
 }
 
 .home-chances-items-item-active {
