--- a/css/style_pagefifth_desktop.css
+++ b/css/style_pagefifth_desktop.css
@@ -141,8 +141,9 @@
 }
 
 .pagefourth-front-foto-image-back {
-    top: 215px;
-    right: -285px;
+    width: 700px;
+    top: 224px;
+    right: -287px;
 }
 
 .pagefourth-front-foto-image-item {
