--- a/css/style_pagetenth_desktop.css
+++ b/css/style_pagetenth_desktop.css
@@ -163,6 +163,23 @@
     justify-content: space-between;
 }
 
+.twiter {
+    width: 36px;
+    line-height: 36px;
+    border-radius: 50%;
+    border: none;
+    background-color: #50ABF1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.fa-twitter {
+    font-size: 22px;
+    color: var(--c-white);
+}
+
 /*---------------*/
 .pagetenth-front-right {
     display: flex;
