--- a/css/style_root.css
+++ b/css/style_root.css
@@ -21,16 +21,22 @@
     --c-button: linear-gradient(0deg, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), #FFFFFF;
     --c-lineMadal: rgba(0, 0, 0, 0.06);
     --c-shadow: rgba(197, 185, 39, 0.2);
+    --c-telegram:  linear-gradient(90deg, #37AEE2 0%, #1E96C8 99.99%);
+    --c-WhatsApp: #1BD741;
+    --c-Viber: #7D539F;
+    
 
     /* font*/ 
     --font-main: Open Sans;
     --font-weight-main: 400;
+    --font-main-color: rgba(0, 0, 0, 0.75);
 
 }
 
 body {
     font-family: var(--font-main);
     font-weight: var(--font-weight-main);
+    color: var(--font-main-color);
     /* display: flex;
     flex-direction: column;
     align-items: center; */
