--- a/css/style_pagesecond_desktop.css
+++ b/css/style_pagesecond_desktop.css
@@ -62,13 +62,19 @@
   }
 /*------------------*/
 
+.pagesecond-front-main > .container {
+    padding-right: 10px;
+}
+
 .pagesecond-front-main-title {
+    padding-right: 0;
     max-width: 770px;
     margin-top: 60px;
     font-weight: 800;
 }
 
 .pagesecond-front-main-title>h1 {
+    font-weight: 800;
     font-size: 38px;
     line-height: 52px;
     margin: 0 0 0 0;
@@ -88,6 +94,8 @@
 }
 
 .pagesecond-front-main-foto {
+    margin-right: 0;
+    width: 100%;
     height: 435px;
     background-image: url(../image/pagesecond/video1.png);
 }
@@ -103,18 +111,18 @@
 .pagesecond-front-main-item-first,
 .pagesecond-front-main-item-second {
     margin-right: 0;
-    margin-bottom: 13px;
+    margin-bottom: 14px;
 }
 
 .pagesecond-front-main-item-third {
     margin-right: 0;
-    margin-bottom: 13px;
+    margin-bottom: 14px;
 }
 
 .pagesecond-front-main-item-fourth {
     margin-right: 0;
-    margin-bottom: 15px;
-    padding: 16px 16px 12px 16px;
+    margin-bottom: 0px;
+    padding: 12px 16px;
 }
 
 .pagesecond-front-main-item-title {
@@ -162,6 +170,7 @@
 .pagesecond-front-main-law {
     margin-top: 40px;
     align-items: flex-start;
+    margin-right: 0;
 }
 
 .pagesecond-front-main-law-title {
@@ -359,12 +368,17 @@ textarea::placeholder, input::placeholder {
 
 /*----------------*/
 
+.pagesecond-practice > .container {
+   padding: 0 10px;
+}
+
 .pagesecond-practice-container {
     margin-top: 60px;
 }
 
 .pagesecond-practice-title-container {
     align-items: center;
+    padding-right: 0;
 }
 
 .pagesecond-practice-title {
@@ -385,28 +399,13 @@ textarea::placeholder, input::placeholder {
 }
 
 .pagesecond-practice-items-container {
-    overflow: unset;
-}
-
-.pagesecond-practice-items {
     margin-top: 40px;
-    width: 100%;
 }
 
 .pagesecond-practice-item-container {
-    width: 14.5%;
-    height: 200px;
-     margin-right: 2.5%;
-}
-
-.pagesecond-practice-items-item {
-    width: 100%;
+    width: 170px;
     height: 255px;
-}
-
-.pagesecond-practice-items-item>img {
-    width: 100%;
-    height: 255px;
+    margin-right: 25px;
 }
 
 /*-------------*/
@@ -517,6 +516,12 @@ textarea::placeholder, input::placeholder {
     width: 31.9%;
     height: 48px; 
     margin-top: 24px;
+}
+
+.pagesecond-consultation-inputs-main::placeholder,
+.pagesecond-consultation-inputs-items-item::placeholder {
+    font-size: 15px;
+    line-height: 20px;
 }
 
 .inputs-act {
