--- a/css/style_pagefourth_desktop.css
+++ b/css/style_pagefourth_desktop.css
@@ -151,12 +151,17 @@
 /*--------------*/
 
 .pagefourth-video-items {
-    padding: 24px;
+    padding: 24px 0 24px 24px;
+}
+
+.pagefourth-video-items-up {
+    padding-right: 24px;
 }
 
 .pagefourth-video-items-up-title {
     font-size: 24px;
     line-height: 33px;
+    padding-right: 24px;
 }
 
 .pagefourth-video-items-up-items {
@@ -251,7 +256,6 @@
 }
 
 .pagefourth-alcohol-survey-title {
-    width: 100%;
     font-size: 24px;
     line-height: 33px;
 }
