--- a/css/style_pagesecond_mobile.css
+++ b/css/style_pagesecond_mobile.css
@@ -6,7 +6,12 @@
     display: none;
 }
 
+.pagesecond-front-main > .container {
+    padding-right: 0px;
+}
+
 .pagesecond-front-main-title {
+    padding-right: 10px;
     margin-top: 20px;
     font-weight: 800;
 }
@@ -34,7 +39,7 @@
 }
 
 .pagesecond-front-main-foto {
-    width: 100%;
+    margin-right: 10px;
     height: 170px;
     background-image: url(../image/pagesecond/video.png);
     background-size: cover;
@@ -110,6 +115,7 @@
 }
 
 .pagesecond-front-main-law {
+    margin-right: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -246,7 +252,7 @@
     margin-bottom: 10px;
 }
 
-textarea::placeholder, input::placeholder {
+.pagesecond-front-form-input > input::placeholder {
     font-size: 13px;
     line-height: 18px;
     color: var(--c-grey);
@@ -339,11 +345,16 @@ textarea::placeholder, input::placeholder {
 
 /*--------------*/
 
+.pagesecond-practice > .container {
+    padding-right: 0;
+}
+
 .pagesecond-practice-container {
     margin-top: 45px;
 }
 
 .pagesecond-practice-title-container {
+    padding-right: 10px ;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -358,34 +369,50 @@ textarea::placeholder, input::placeholder {
 
 .pagesecond-practice-items-container {
     overflow: auto;
+    margin-top: 25px;
 }
 
 .pagesecond-practice-items {
     display: flex;
     flex-direction: row;
     width: max-content;
-    margin-top: 25px;
+    
 }
 
 .pagesecond-practice-item-container {
-    width: 130px;
-    height: 200px;
-    margin-right: 10px;
+    width: 132px;
+    height: 198px;
+    margin-right: 8px;
+    background-size: auto auto;
+    background-position: 0 0;
 }
 
-.pagesecond-practice-items-item {
-    width: 130px;
-    height: 200px;
-    
+.pagesecond-practice-item-container:nth-child(1) {
+    background: url(../image/pagesecond/practice1.png);
+}
+
+.pagesecond-practice-item-container:nth-child(2) {
+    background: url(../image/pagesecond/practice2.png);
+}
+
+.pagesecond-practice-item-container:nth-child(3) {
+    background: url(../image/pagesecond/practice3.png);
+}
+
+.pagesecond-practice-item-container:nth-child(4) {
+    background: url(../image/pagesecond/practice4.png);
+}
+
+.pagesecond-practice-item-container:nth-child(5) {
+    background: url(../image/pagesecond/practice5.png);
+}
+
+.pagesecond-practice-item-container:nth-child(6) {
+    background: url(../image/pagesecond/practice6.png);
 }
 
 .pagesecond-practice-item-container:nth-of-type(6) {
     margin-right: 0;   
-}
-
-.pagesecond-practice-items-item>img {
-    width: 130px;
-    height: 200px;
 }
 
 .pagesecond-practice-circles {
@@ -546,6 +573,7 @@ textarea::placeholder, input::placeholder {
     border-bottom: 1px solid var(--c-line);
 }
 
+.pagesecond-consultation-inputs-items-item::placeholder,
 .pagesecond-consultation-inputs-main::placeholder {
     font-weight: normal;
     font-size: 13px;
